# actix-web-sample

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20250128092550_init.up.sql
sql/: schema.sql  setup.sql
src/: db.rs  handlers.rs  main.rs
static/css/: style.css
templates/: base.askama.html  base.tera  hello.askama.html  item-detail.askama.html  item-detail.tera  item-list.askama.html  item-list.tera  item-new.tera  todo.askama.html
