[package]
name = "actix-web-sample"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
askama = "0.12"
askama_actix = "0.14"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
chrono = { version = "0.4.39", features = ["serde"] }
