[package]
name = "actix-web-sample"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "chrono"] }
tera = "1.20.0"
chrono = { version = "0.4.39", features = ["serde"] }
